Add anchor point, still trying to fix physics

--- a/TODO.txt
+++ b/TODO.txt
@@ -11,8 +11,8 @@ ________________________________________________
 ________________________________________________
     Current Tasks
     ¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯
-    - Create sidebar for sim controls
-    - Create simulation space
+
+    🔴 Add physics to pendulum
     ____________________________________________
     Ideas/Features
     ¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯
@@ -38,7 +38,11 @@ ________________________________________________
                      BUGS
 ________________________________________________
 
-
+    - Physics math cause pendulum to shoot off
 ________________________________________________
               COMPLETED FEATURES/TASKS
 ________________________________________________    
+
+    ✅ Create sidebar for sim controls
+    ✅ Create simulation space
+    ✅ Create pendulum in 3d space
